# ai-agent-mixer

./: .gitignore  PROJECT_SPECS.md  README.md  docker-compose.yml
backend/: .coverage  .dockerignore  .env.template  Dockerfile  README.md  coverage.json  pyproject.toml
backend/app/: main.py
backend/app/agents/: agent_node.py
backend/app/core/: callbacks.py  cycle_manager.py  exceptions.py  logging.py  orchestrator.py  state.py  websocket_manager.py
backend/app/schemas/: config.py
backend/app/services/: config_manager.py  initializer.py  mcp_manager.py  ollama_client.py  prompt_builder.py  tool_adapter.py
backend/tests/: test_config_manager.py  test_conversation_flow.py  test_mcp_manager.py  test_tool_adapter.py
config/: daily-agent.prompt.md  example-simple.yaml  example-with-mcp-placeholder.yaml  example-with-metadata.yaml  multi-scenario-example.yaml  philosophy-debate.yaml  self-driven-agent-exchange.yaml  tool-using-agents.yaml
docs/: ABOUT.md  AGENT_METADATA.md  FIX_CONVERSATION_START_ISSUE.md  IMPLEMENTATION_SUMMARY_CONVERSATION_FIX.md  MULTI_SCENARIO.md  PHASE1_COMPLETE.md  PHASE1_SUMMARY.md  PHASE2_QUICK_START.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_QUICK_START.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_QUICK_START.md  PHASE6_SUMMARY.md  TESTING_GUIDE_CONVERSATION_FIX.md  TROUBLESHOOTING.md  api.md  architecture.md  configuration-guide.md
frontend/: .dockerignore  .env.template  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: basic-ui.spec.ts  features.spec.ts
frontend/src/: App.tsx  (+1 more)
(+8 files in other folders)
